@@ -8,22 +8,22 @@ use warnings;
 use Test::More;
 
 BEGIN {
-   $ENV{DEVEL_TESTS}
+   $ENV{ DEVEL_TESTS }
       or plan skip_all => "Mark checks are only performed when DEVEL_TESTS=1";
 }
 
 sub slurp_file {
-   my ($qfn) = @_;
-   open(my $fh, '<', $qfn)
-      or die("Can't open \"$qfn\": $!\n");
+   my $qfn = shift;
+   open( my $fh, '<', $qfn )
+      or die( "Can't open \"$qfn\": $!\n" );
 
    local $/;
    return <$fh>;
 }
 
 sub read_manifest {
-   open(my $fh, '<', 'MANIFEST')
-      or die("Can't open \"MANIFEST\": $!\n");
+   open( my $fh, '<', 'MANIFEST' )
+      or die( "Can't open \"MANIFEST\": $!\n" );
 
    my @manifest = <$fh>;
    s/\s.*//s for @manifest;
@@ -35,8 +35,8 @@ sub read_manifest {
 
    plan tests => 0+@qfns;
 
-   for my $qfn (@qfns) {
-      my $file = slurp_file($qfn);
+   for my $qfn ( @qfns ) {
+      my $file = slurp_file( $qfn );
       ok( $file !~ /~{3}|&{3}/, "$qfn - Has no developer bookmarks" );
    }
 }
