@@ -10,7 +10,7 @@ use Test::More;
 BEGIN {
    # Ensure a recent version of Test::Pod
    my $min_tp = 1.22;
-   eval("use Test::Pod $min_tp; 1")
+   eval( "use Test::Pod $min_tp; 1" )
       or plan skip_all => "Test::Pod $min_tp required for testing POD";
 }
 
